# arnon_sidescroller

./: .clang-format  .gitignore  CMakeLists.txt  README.md  arnon_sublime.sublime-workspace  overview.md
arnon/: CMakeLists.txt
arnon/src/: application.cpp  application.h  clock.cpp  clock.h  component.h  delegate.h  events.h  gameObject.cpp  gameObject.h  gameSettings.h  glfwCallbacks.cpp  glfwCallbacks.h  inputManager.h  main.cpp  scene.cpp  scene.h  sceneManager.cpp  sceneManager.h  sceneState.h  scene_mainMenu.cpp  scene_mainMenu.h  scene_optionsMenu.h  signal.h  slot.h  window.cpp  window.h  world.cpp  world.h
arnon/src/GL/: animationTexture.cpp  animationTexture.h  framebuffer.cpp  framebuffer.h  glCallbacks.cpp  glCallbacks.h  glCore45.cpp  glCore45.h  indexBuffer.cpp  indexBuffer.h  shaderObject.cpp  shaderObject.h  shaderProgram.cpp  shaderProgram.h  shape2D.cpp  shape2D.h  shape2D_circle.cpp  shape2D_circle.h  shape2D_quad.cpp  shape2D_quad.h  sprite.cpp  sprite.h  texture.cpp  texture.h  vertexArray.cpp  vertexArray.h  vertexBuffer.cpp  vertexBuffer.h  vertextypes.h
arnon/src/arnlog/: arnlog.h  logger.h
arnon/src/debug/: arnlog.cpp  arnlog.h  asserts.h  autoTimer.cpp  autoTimer.h  logger.h
arnon/src/imgui/: imconfig.h  imgui_glfw.cpp  imgui_glfw.h
cmake_modules/: FindSFML.cmake
ext/imgui/: CMakeLists.txt
resources/shaders/: sprite_default.frag  sprite_default.vert
src/: main.cpp
